# embedded_systems_minor

./: README.md
Course_material/meshes/: readme.md
Course_material/ramps16_ws/: readme.md
Course_material/ramps16_ws/src/my_robot_bringup/config/: my_robot_controllers.yaml
Course_material/ramps16_ws/src/my_robot_bringup/launch/: my_robot.launch.xml
Course_material/ramps16_ws/src/my_robot_hardware/: CMakeLists.txt  my_robot_hardware_interface.xml  package.xml
Course_material/ramps16_ws/src/my_robot_hardware/include/: SerialStreamHelper.hpp  StepperClient.hpp  StepperDriver.hpp  arm_interface.hpp
Course_material/ramps16_ws/src/my_robot_hardware/src/: arm_hardware_interface.cpp
Course_material/ramps16_ws/src/ramps_stepper_description/: CMakeLists.txt  package.xml
Course_material/ramps16_ws/src/ramps_stepper_description/launch/: display.launch.xml
Course_material/ramps16_ws/src/ramps_stepper_description/rviz/: urdf_config.rviz
Course_material/ramps16_ws/src/ramps_stepper_description/urdf/: common_properties.xacro  five_steppers.ros2_control.xacro  five_steppers.xacro  ramps16.urdf.xacro
Course_material/rviz/: readme.md
course_material/Lesson_1/: meshes
slides/Lesson_1/: readme.md
slides/Lesson_2/: readme.md
slides/Lesson_3/: readme.md
